# StoicOS

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: index.html
root/src/: CommandHandler.cpp  CommandHandler.h  CommandProcessor.cpp  CommandProcessor.h  compile.bat  main.cpp
